syntax = "proto3";

option go_package = "genprotos/";

package finance;

import "finance-protos/void.proto";

service TransactionService {
    rpc Create(TransactionCReq) returns (Void);
    rpc GetByID(ByID) returns (TransactionGRes);
    rpc Delete(ByID) returns (Void);
    rpc GetAll(TransactionGAReq) returns (TransactionGARes);
}

message TransactionCReq {
    string user_id = 1;
    string account_id = 2;
    string category_id = 3;
    float amount = 4;
    string type = 5;
    string description = 6;
}

message TransactionCReqForSwagger {
    string account_id = 2;
    string category_id = 3;
    float amount = 4;
    string type = 5;
    string description = 6;
}

message TransactionGRes {
    string id = 1;
    string user_id = 2;
    string account_id = 3;
    string category_id = 4;
    float amount = 5;
    string type = 6;
    string description = 7;
    string created_datetime = 8;
}

message TransactionGAReq {
    string user_id = 1;
    string account_id = 2;
    string category_id = 3;
    float  amount = 4;
    string type = 5;
    string date_from = 6;
    string date_to = 7;
    Pagination pagination = 8;
}

message TransactionGARes {
    repeated TransactionGRes transactions = 1;
}